style: post header and side menu

--- a/src/articles/post-2.mdx
+++ b/src/articles/post-2.mdx
@@ -7,7 +7,7 @@ date: "2023-11-06"
 read_time: ""
 last_update: ""
 thumbnail: "/mediaArticles/embedding-vectors-in-NLP-word-and-sentence-embeddings/emb_colormesh_10dim_thumbnail.png"
-tags: ["AI", "NLP", "embeddings", "python"]
+tags: ["mmm", "aaa", "mmm"]
 ---
 
 <figure>
