feat: add search bar funcionality

--- a/src/articles/post-2.mdx
+++ b/src/articles/post-2.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Embedding Vectors in NLP"
+title: "Post 2"
 subtitle: "Word and Sentence Embeddings"
 description: ""
 author: "Javier Castano Candela"
