--- a/src/articles/post-3.mdx
+++ b/src/articles/post-3.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Embedding Vectors in NLP"
+title: "Post 3"
 subtitle: "Word and Sentence Embeddings"
 description: ""
 author: "Javier Castano Candela"
