--- a/src/articles/post-4.mdx
+++ b/src/articles/post-4.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Embedding Vectors in NLP"
+title: "Post 4"
 subtitle: "Word and Sentence Embeddings"
 description: ""
 author: "Javier Castano Candela"
