style: improve resources section in article

--- a/src/articles/embedding-vectors-in-NLP-word-and-sentence-embeddings.mdx
+++ b/src/articles/embedding-vectors-in-NLP-word-and-sentence-embeddings.mdx
@@ -648,7 +648,7 @@ this article or that I find useful in case you want to go deeper. I would also b
 feedback related to the article 🙂 Feel free to contact me through <a href="https://www.linkedin.com/in/javier-castano-candela/" target="_blank">LinkedIn</a>
 or the contact page.
 
-<div className="resources">
+<div className="resources bg-slate-400">
   <h5>Resources</h5>
   <ol>
     <li>
