post: add threading in python, threading lib

--- a/src/articles/introduction-to-concurrence-and-parallelism.mdx
+++ b/src/articles/introduction-to-concurrence-and-parallelism.mdx
@@ -280,7 +280,7 @@ executed at the same instant of time), or it can be switching between tasks very
 
 > 📝 In parallelism two things occur in overlapping time intervals and both occur 
 > simultaneously, while in concurrency without parallelism they occur in overlapping time 
-> intervals but they don’t occur simultaneously, instead they are swicthed one for the other 
+> intervals but they don&#39;t occur simultaneously, instead they are swicthed one for the other 
 > very quickly.
 
 The same two tasks from the figure above (sequential execution) would look like the 
